--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -142,7 +142,11 @@
                     {{#each this}}
                     <div class="nav">
                         <div class="nav-item">
-                            <a href="{{link}}" class="nav-link">{{text}}</a>
+                            {{#if @last}}
+                            <a href="{{link}}" class="nav-link disabled">{{text}}</a>
+                            {{else}}
+                            <a href="{{link}}" class="nav-link action">{{text}}</a>
+                            {{/if}}
                         </div>
                     </div>
                     {{/each}}
