--- a/src/container/index8.hbs
+++ b/src/container/index8.hbs
@@ -1,6 +1,6 @@
 <div class="row nav nav-tabs">
     <div class="col-8 mt-5 ms-3 mb-2">
-        <h5>Maksum Tkachenko</h5>
+        <h5>Maksym Tkachenko</h5>
     </div>
     <div class="col-3 mt-5 me-3 mb-2">
         <h5>Resume proect</h5>
