--- a/src/container/index8.hbs
+++ b/src/container/index8.hbs
@@ -14,60 +14,60 @@
 </div>
 <div class="row ">
     <div class="col-2 mb-3 ">
-        <a href="http://localhost:3000/bio" class="btn btn-primary ps-5 pe-5">BiO</a>
+        <a href="bio" class="btn btn-primary ps-5 pe-5">BiO</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/car" class="btn btn-primary ps-5 pe-5">CaR</a>
+        <a href="car" class="btn btn-primary ps-5 pe-5">CaR</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/education" class="btn btn-primary ps-5 pe-5">Education</a>
+        <a href="education" class="btn btn-primary ps-5 pe-5">Education</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/js" class="btn btn-primary ps-5 pe-5">JS</a>
+        <a href="js" class="btn btn-primary ps-5 pe-5">JS</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/mac" class="btn btn-primary ps-5 pe-5">MaС</a>
+        <a href="mac" class="btn btn-primary ps-5 pe-5">MaС</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/person" class="btn btn-primary ps-5 pe-5">PerSon</a>
+        <a href="person" class="btn btn-primary ps-5 pe-5">PerSon</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/program" class="btn btn-primary ps-4 pe-5">Program</a>
+        <a href="program" class="btn btn-primary ps-4 pe-5">Program</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/shopcart" class="btn btn-primary ps-4 pe-4">ShOpcart</a>
+        <a href="shopcart" class="btn btn-primary ps-4 pe-4">ShOpcart</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/shopcatalog" class="btn btn-primary ps-4 pe-4">ShOpcatalog</a>
+        <a href="shopcatalog" class="btn btn-primary ps-4 pe-4">ShOpcatalog</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/shophome" class="btn btn-primary ps-4 pe-4">ShOpHome</a>
+        <a href="shophome" class="btn btn-primary ps-4 pe-4">ShOpHome</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/shoporder" class="btn btn-primary ps-4 pe-4">ShOpOrdeR</a>
+        <a href="shoporder" class="btn btn-primary ps-4 pe-4">ShOpOrdeR</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/shopreview" class="btn btn-primary ps-4 pe-4">ShOpreView</a>
+        <a href="shopreview" class="btn btn-primary ps-4 pe-4">ShOpreView</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/skills" class="btn btn-primary ps-5 pe-5">Skills</a>
+        <a href="skills" class="btn btn-primary ps-5 pe-5">Skills</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/summary" class="btn btn-primary ps-5 pe-5">SymmaRy</a>
+        <a href="summary" class="btn btn-primary ps-5 pe-5">SymmaRy</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/task21" class="btn btn-primary ps-5 pe-5">taSk21</a>
+        <a href="task21" class="btn btn-primary ps-5 pe-5">taSk21</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/task22" class="btn btn-primary ps-5 pe-5">taSk22</a>
+        <a href="task22" class="btn btn-primary ps-5 pe-5">taSk22</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/task31" class="btn btn-primary ps-5 pe-5">taSk31</a>
+        <a href="task31" class="btn btn-primary ps-5 pe-5">taSk31</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/web" class="btn btn-primary ps-5 pe-5">Web</a>
+        <a href="web" class="btn btn-primary ps-5 pe-5">Web</a>
     </div>
     <div class="col-2 mb-3">
-        <a href="http://localhost:3000/work" class="btn btn-primary ps-5 pe-5">WorK</a>
+        <a href="work" class="btn btn-primary ps-5 pe-5">WorK</a>
     </div>
 </div>
