--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -27,7 +27,7 @@
 
   {{! Завдання 5. Зробіть, щоб елемент з індинтифікатором blue мав синій колір тексту }}
 
-  <section class='m-5 card'>
+  <section class='m-5 card box'>
     <div class='card-header'>Завдання 5</div>
     <div class='card-body'>
       <div>
